--- a/admin/index.html
+++ b/admin/index.html
@@ -123,10 +123,10 @@
     <script>
         // Configuración de Firebase (Reemplazar con tus propias credenciales)
         const firebaseConfig = {
-            apiKey: "TU_API_KEY",
-            authDomain: "TU_AUTH_DOMAIN",
-            projectId: "TU_PROJECT_ID",
-            storageBucket: "TU_STORAGE_BUCKET"
+            apiKey: "AIzaSyC-bzUQKIzTkurLkudfLtvh8OjOSD8YZ0w",
+  authDomain: "base-de-datos-pagina-f9038.firebaseapp.com",
+  projectId: "base-de-datos-pagina-f9038",
+  storageBucket: "base-de-datos-pagina-f9038.appspot.com",
         };
 
         firebase.initializeApp(firebaseConfig);
