--- a/admin/index.html
+++ b/admin/index.html
@@ -123,10 +123,12 @@
     <script>
         // Configuración de Firebase (Reemplazar con tus propias credenciales)
         const firebaseConfig = {
-            apiKey: "AIzaSyC-bzUQKIzTkurLkudfLtvh8OjOSD8YZ0w",
+  apiKey: "AIzaSyC-bzUQKIzTkurLkudfLtvh8OjOSD8YZ0w",
   authDomain: "base-de-datos-pagina-f9038.firebaseapp.com",
   projectId: "base-de-datos-pagina-f9038",
   storageBucket: "base-de-datos-pagina-f9038.appspot.com",
+  messagingSenderId: "455220883391",
+  appId: "1:455220883391:web:b2ade4281c12e20fb5bb0a",
         };
 
         firebase.initializeApp(firebaseConfig);
