--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <!-- Font Awesome para los iconos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!-- Scripts de Firebase -->
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
@@ -14,7 +15,7 @@
 </head>
 <body>
     <header>
-        <h1>URBAN STYLE</h1>
+        <h1>POSADASCHIC</h1>
     </header>
     <nav>
         <ul>
