--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
     </div>
     <button id="cart-toggle" class="cart-toggle">
         <i class="fas fa-shopping-cart"></i>
+        <span id="cart-count"></span>
     </button>
     <div id="cart" class="cart">
         <h3>Tu carrito</h3>
@@ -42,7 +43,6 @@
         <p>Total: $<span id="cart-total">0</span></p>
         <button id="checkout-btn" class="checkout-btn">Finalizar compra</button>
     </div>
-
     <!-- Cargar el script al final del body -->
     <script src="script.js"></script>
 </body>
