--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,12 @@
     
 
 <!-- Firebase App (la base) -->
-<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-app-compat.js"></script>
 <!-- Firestore -->
-<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
-    <script src="script.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-firestore-compat.js"></script>
+<!-- Tu script -->
+<script src="script.js"></script>
+    
 </head>
 <body>
     <header>
