--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,10 @@
     </button>
 
     <div id="cart" class="cart">
-        <h3>Tu carrito</h3>
+        <div class="cart-header">
+            <h3>Tu carrito</h3>
+            <button id="close-cart" class="close-cart">×</button>
+        </div>
         <div id="cart-items"></div>
         <div id="cart-total">Total: $0</div>
         <button id="checkout-btn">Finalizar compra</button>
