--- a/public/index.html
+++ b/public/index.html
@@ -1,69 +1,58 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>POSADASCHIC</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- Firebase SDKs -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>POSADASCHIC</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>POSADASCHIC</h1>
-    </header>
+  <header>
+    <h1>POSADASCHIC</h1>
+  </header>
 
-    <nav>
-        <ul>
-            <li><a href="#" class="category-filter" data-category="all">Todo</a></li>
-            <li><a href="#" class="category-filter" data-category="Pantalones">Pantalones</a></li>
-            <li><a href="#" class="category-filter" data-category="Remeras">Remeras</a></li>
-            <li><a href="#" class="category-filter" data-category="Buzos">Buzos</a></li>
-        </ul>
-    </nav>
-
-    <div class="container">
-        <h2 class="section-title">Más vendidos</h2>
-        <div id="best-sellers" class="product-grid"></div>
-
-        <h2 class="section-title">Catálogo completo</h2>
-        <div id="products-container" class="product-grid"></div>
+  <nav>
+    <div class="category-toggle">
+      <button id="category-btn">Categorías</button>
+      <ul id="category-list" class="category-list">
+        <li><a href="#" class="category-filter" data-category="all">Todo</a></li>
+        <li><a href="#" class="category-filter" data-category="Pantalones">Pantalones</a></li>
+        <li><a href="#" class="category-filter" data-category="Remeras">Remeras</a></li>
+        <li><a href="#" class="category-filter" data-category="Buzos">Buzos</a></li>
+      </ul>
     </div>
+  </nav>
 
-    <button id="cart-toggle">
-        🛒
-        <span id="cart-count">0</span>
+  <div class="container">
+    <section id="products-container" class="product-grid">
+      <!-- Los productos se cargarán aquí -->
+    </section>
+  </div>
+
+  <button id="cart-toggle" class="cart-toggle">
+    <span id="cart-count" class="cart-count">0</span>
+    🛒
+  </button>
+
+  <div id="cart" class="cart">
+    <div class="cart-header">
+      <h3>Tu carrito</h3>
+      <button id="close-cart" class="close-cart">&times;</button>
+    </div>
+    <div id="cart-items" class="cart-items">
+      <!-- Los elementos del carrito se cargarán aquí -->
+    </div>
+    <div id="cart-total" class="cart-total">
+      Total: $0
+    </div>
+    <button id="checkout-btn" class="checkout-btn">
+      Finalizar compra
     </button>
+  </div>
 
-    <div id="cart" class="cart">
-        <div class="cart-header">
-            <h3>Tu carrito</h3>
-            <button id="close-cart" class="close-cart">×</button>
-        </div>
-        <div id="cart-items"></div>
-        <div id="cart-total">Total: $0</div>
-        <button id="checkout-btn">Finalizar compra</button>
-    </div>
-
-    <!-- Firebase Config -->
-    <script>
-        const firebaseConfig = {
-            apiKey: "AIzaSyC-bzUQKIzTkurLkudfLtvh8OjOSD8YZ0w",
-            authDomain: "base-de-datos-pagina-f9038.firebaseapp.com",
-            projectId: "base-de-datos-pagina-f9038",
-            storageBucket: "base-de-datos-pagina-f9038.appspot.com",
-            messagingSenderId: "455220883391",
-            appId: "1:455220883391:web:b2ade4281c12e20fb5bb0a",
-            measurementId: "G-4RQ3H9J2L1"
-        };
-
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-        const db = firebase.firestore();
-    </script>
-    
-    <!-- Tu script principal -->
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
