--- a/public/index.html
+++ b/public/index.html
@@ -36,16 +36,14 @@
   </header>
 
   <nav>
-    <div class="category-toggle">
-      <button id="category-btn">Categorías</button>
-      <ul id="category-list" class="category-list">
-        <li><a href="#" class="category-filter" data-category="all">Todo</a></li>
-        <li><a href="#" class="category-filter" data-category="Pantalones">Pantalones</a></li>
-        <li><a href="#" class="category-filter" data-category="Remeras">Remeras</a></li>
-        <li><a href="#" class="category-filter" data-category="Buzos">Buzos</a></li>
-      </ul>
-    </div>
-  </nav>
+   <div class="category-toggle">
+  <div class="categories">
+    <button class="category-filter active" data-category="all">Todo</button>
+    <button class="category-filter" data-category="Pantalones">Pantalones</button>
+    <button class="category-filter" data-category="Remeras">Remeras</button>
+    <button class="category-filter" data-category="Buzos">Buzos</button>
+  </div>
+</div>
 
   <div class="container">
     <section id="products-container" class="product-grid">
