--- a/public/index.html
+++ b/public/index.html
@@ -1,78 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>POSADASCHIC</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
-  
-  <!-- Firebase App (the core Firebase SDK) -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <!-- Add Firebase Firestore -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
-  
-  <!-- Initialize Firebase -->
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyC-bzUQKIzTkurLkudfLtvh8OjOSD8YZ0w",
-      authDomain: "base-de-datos-pagina-f9038.firebaseapp.com",
-      projectId: "base-de-datos-pagina-f9038",
-      storageBucket: "base-de-datos-pagina-f9038.appspot.com",
-      messagingSenderId: "455220883391",
-      appId: "1:455220883391:web:b2ade4281c12e20fb5bb0a",
-      measurementId: "G-4RQ3H9J2L1"
-    };
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-  </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>POSADASCHIC</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>POSADASCHIC</h1>
-  </header>
+    <header>
+        <h1>POSADASCHIC</h1>
+    </header>
 
-  <nav>
-   <div class="category-toggle">
-  <div class="categories">
-    <button class="category-filter active" data-category="all">Todo</button>
-    <button class="category-filter" data-category="Pantalones">Pantalones</button>
-    <button class="category-filter" data-category="Remeras">Remeras</button>
-    <button class="category-filter" data-category="Buzos">Buzos</button>
-  </div>
-</div>
+    <nav>
+        :::: category-toggle
+        ::: categories
+            <button class="category-filter active" data-category="all">Todo</button>
+            <button class="category-filter" data-category="Pantalones">Pantalones</button>
+            <button class="category-filter" data-category="Remeras">Remeras</button>
+            <button class="category-filter" data-category="Buzos">Buzos</button>
+        :::
+        ::::
+    </nav>
 
-  <div class="container">
-    <section id="products-container" class="product-grid">
-      <!-- Los productos se cargarán aquí -->
-    </section>
-  </div>
+    :::: container
+    ::: {#products-container .section .product-grid}
+    :::
+    ::::
 
-  <button id="cart-toggle" class="cart-toggle">
-    <span id="cart-count" class="cart-count">0</span>
-    🛒
-  </button>
-
-  <div id="cart" class="cart">
-    <div class="cart-header">
-      <h3>Tu carrito</h3>
-      <button id="close-cart" class="close-cart">&times;</button>
+    <!-- Botón del carrito con contador -->
+    <div class="cart-toggle">
+        <span id="cart-count" class="cart-count">0</span>
+        🛒
     </div>
-    <div id="cart-items" class="cart-items">
-      <!-- Los elementos del carrito se cargarán aquí -->
-    </div>
-    <div id="cart-total" class="cart-total">
-      Total: $0
-    </div>
-    <button id="checkout-btn" class="checkout-btn">
-      Finalizar compra
-    </button>
-  </div>
 
-  <!-- Tu script personalizado debe ir después de Firebase -->
-  <script src="script.js"></script>
+    <!-- Carrito -->
+    :::: {#cart .cart}
+        ::: cart-header
+            <h3>Tu carrito</h3>
+            <button class="close-cart">×</button>
+        :::
+
+        ::: {#cart-items .cart-items}
+        :::
+
+        ::: {#cart-total .cart-total}
+        :::
+    ::::
+
+    <!-- Script de Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    
+    <!-- Configuración de Firebase -->
+    <script>
+        const firebaseConfig = {
+            // Tu configuración de Firebase aquí
+        };
+        firebase.initializeApp(firebaseConfig);
+    </script>
+
+    <!-- Script principal -->
+    <script src="script.js"></script>
 </body>
 </html>
